# GDVdev

./: .gitignore
ex1/: CMakeLists.txt  Task.cpp  Task.h  TriangleMesh.cpp  TriangleMesh.h  TriangleScene.cpp  TriangleScene.h  lsaNotes.xopp  main.cpp  main.h
ex2/: ASSET_SOURCES  CMakeLists.txt  GridTask.cpp  GridTask.h  Matrix.cpp  Matrix.h  SceneTask.cpp  SceneTask.h  Task.h  Timer.cpp  Timer.h  TriangleMesh.cpp  TriangleMesh.h  Vec3.h  main.cpp  main.h  performance_report.md  shader.h
ex2/BlenderModels/car/: BLENDSWAP_LICENSE.txt
ex2/BlenderModels/tree/: BLENDSWAP_LICENSE.txt
ex2/BlenderModels/tree/stlexport/: tree_trunk.stl
ex2/Models/: Sketched-Teddy-org.off  cube.off  tree_trunk.off  triangle.off
ex2/Shader/: Toon_Shader2.frag  Toon_Shader2.vert  Toon_Shader3.frag
ex3/: BoundingPlanes.cpp  BoundingPlanes.h  CMakeLists.txt  ClipPlane.h  ObjectFormation.cpp  ObjectFormation.h  Plane.cpp  Plane.h  Skybox.cpp  Skybox.h  TerrainGenerator.cpp  TerrainGenerator.h  TextureStore.cpp  TextureStore.h  TriangleMesh.cpp  TriangleMesh.h  Vec3.h  imageloader.cpp  main.cpp  main.h
ex4/: CMakeLists.txt  ClipPlane.h  Ray.h  SceneLoader.h  TriangleMesh.cpp  TriangleMesh.h  Vec3.h  imageloader.cpp  main.cpp  main.h
ex4/Models/: Alien.off  cylinder.off  floor.off  seahorse.off  sphere.off  triangle.off
ex4/Models/blender/: cylinder.blend
